2003-08-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Brother-HL-1435.xml, printer/Brother-HL-1430.xml,
	  printer/Brother-HL-1230.xml, printer/Brother-HL-1240.xml,
	  printer/Brother-HL-7050N.xml, printer/Brother-HL-7050.xml,
	  printer/Brother-HL-1850.xml, printer/Brother-HL-1870N.xml,
	  printer/Brother-HL-1470N.xml, printer/Brother-HL-2460N.xml,
	  printer/Brother-HL-1650.xml, printer/Brother-HL-1670N.xml,
	  printer/Brother-HL-2460.xml, printer/Brother-HL-3260N.xml,
	  printer/Brother-HL-3400CN.xml, printer/Brother-HL-2600CN.xml,
	  printer/Brother-HL-3450CN.xml, printer/Brother-HL-4000CN.xml,
	  driver/Postscript.xml, driver/hl1250.xml, driver/ljet4.xml,
	  driver/ljet4d.xml, driver/lj4dith.xml, driver/pxlmono.xml,
	  driver/pxlcolor.xml, driver/lj5gray.xml, driver, lj5mono.xml,
	  opt/56.xml, opt/87.xml, opt/160.xml, opt/Brother-MediaType.xml,
	  opt/PJL-Duplex.xml, opt/PJL-PJLBinding.xml, PJL-PJLDuplex.xml:
	  Added Brother HL-1230, HL-1430, HL-1435, HL-1850, HL-1870N,
	  HL-3260N, HL-7050, HL-7050N, HL-2600CN, HL-3450CN, HL-4000CN,
	  improvements and updates for many other Brother laser printers.

2003-08-05  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Lexmark-Winwriter_150c.xml: There is a driver for this
	  printer now, raised it to "Partially" and updated the text.

2003-08-04  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/epsonepl-Density.xml: Fixed defaults.

	* opt/epsonepl-FlowControl.xml: Added "FlowControl" option to
	  the "eplXXXXl" drivers.

2003-08-02  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Brother-HL-5030.xml, printer/Brother-HL-5050.xml,
	  printer/Brother-HL-5070N.xml, driver/hl1250.xml,
	  driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono,
	  driver/ljet4.xml, driver/Postscript.xml, opt/160.xml,
	  opt/56.xml, opt/87.xml, opt/Brother-MediaType.xml: Added Brother
	  HL-5030, HL-5050, HL-5070N.

	* opt/87.xml, opt/160.xml, driver/lj5gray, driver/lj5mono: Added
	  Brother HL-5040.
