@@ -24,13 +24,49 @@
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
-  <unverified/><!--no "contrib_url"-->
+  <unverified/>
+  <contrib_url>http://saf.bio.caltech.edu/pub/software/linux_or_unix_tools/pap_backend_with_cups.txt</contrib_url>
   <comments>
-    <en>&lt;p&gt;Works with no hassle as generic Postscript parallel printer. 
-&lt;p&gt;Works slightly faster over ethernet, but requires an AAUI to 10baseT adaptor on the printer, and the netatalk package installed. 
-&lt;p&gt;To use as an Appletalk printer under RedHat (LPRng), configure with printtool as a local printer attached to /dev/null, then edit $spooldir/general.cfg and change PRINTER_TYPE=ATALK, and create a file in the spooldir called &quot;.paprc&quot; containing the Appletalk name of the printer (the default is &quot;Laserwriter&quot;).  Contrary to the  netatalk HOWTO&lt;/a&gt;, comments in this file will screw things up (because of dumb code in LPRng&apos;s master filter). 
-&lt;p&gt;Maybe one day RedHat printtool (or its sucessors) will support Appletalk printers directly (see  RedHat bug #24990&lt;/a&gt;).  
-&lt;p&gt;Changing the AppleTalk name, setting resolution (300dpi or 600pdi) and enable/disabling test-page-at-power-up needs a Mac (or in my case, an Amiga with ShapeShifter - maybe MOL works, or UAE+Shapeshifter, but I don&apos;t know if they support device-level access to the network card) and Apple&apos;s printer control software (available from  ftp.apple.com&lt;/a&gt;). 
-&lt;p&gt;These comments added by &lt;a href=&quot;mailto:LinuxPrinting@DuncanGibb.com&quot;&gt;Duncan Gibb&lt;/a&gt;. </en>
+    <en>
+
+    Works with no hassle as generic Postscript parallel
+    printer.&lt;p&gt;
+
+    Works slightly faster over ethernet, but requires an AAUI to
+    10baseT adaptor on the printer, and the netatalk package
+    installed.&lt;p&gt;
+
+    To use as an Appletalk printer under LPRng (RedHat 7.x), configure
+    with printtool as a local printer attached to /dev/null, then edit
+    $spooldir/general.cfg and change PRINTER_TYPE=ATALK, and create a
+    file in the spooldir called ".paprc" containing the Appletalk name
+    of the printer (the default is "Laserwriter"). Contrary to the
+    netatalk HOWTO, comments in this file will screw things up
+    (because of dumb code in LPRng&apos;s master filter).&lt;p&gt;
+
+    With CUPS (RedHat 9), install David Mathog&apos;s pap backend
+    driver
+    (http://saf.bio.caltech.edu/pub/software/linux_or_unix_tools/pap)
+    into /usr/lib/cups/backend.  Change the paths to pap and psf to
+    "/usr/bin/pap" and "/usr/sbin/psf" respectively (not
+    /usr/local/(s)bin), and chmod 755 it.  Then use CUPS&apos;s
+    web-based config.  Or use RedHat printconf to create a local
+    printer on /dev/null, then edit the DeviceURI in
+    /etc/cups/printers.conf to read "pap://Laserwriter".  If you have
+    several Laserwiters, read the real instructions for the pap
+    backend at &lt;a
+    href="http://saf.bio.caltech.edu/pub/software/linux_or_unix_tools/pap_backend_with_cups.txt"&gt;http://saf.bio.caltech.edu/pub/software/linux_or_unix_tools/pap_backend_with_cups.txt&lt;/a&gt;&lt;p&gt;
+
+    Changing the AppleTalk name, setting resolution (300dpi or 600pdi)
+    and enable/disabling test-page-at-power-up needs a Mac (or in my
+    case, an Amiga with ShapeShifter - maybe MOL works, or
+    UAE+Shapeshifter, but I don&apos;t know if they support device-level
+    access to the network card) and Apple&apos;s printer control software
+    (available from ftp.apple.com).&lt;p&gt;
+
+    Thanks to Duncan Gibb (duncangibb at uk dot dmgworldmedia dot com)
+    for these comments.&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
