@@ -1,3 +1,8 @@
+2003-08-11  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Apple-LaserWriter_Pro_630.xml: Added additional comments
+	  from Duncan Gibb.
+
 2003-08-06  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Brother-HL-1435.xml, printer/Brother-HL-1430.xml,
